Fix navbar overlap and force desktop view

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -285,13 +285,14 @@ input[type=password] {
 }
 
 #navbar {
+    z-index: 10;
     margin-left: 0;
     margin-right: 0;
     position: fixed;
     display: block;
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color: white;
+    background-color: yellow;
 }
 
 #inner {
@@ -356,13 +357,7 @@ input[type=password] {
 }
 
 .popup {
-    z-index: 99999;
-}
-
-.curtain {
-    z-index: 99998;
-    --bs-bg-opacity: .5;
-    height: 850px;
+    z-index: 2;
 }
 
 .center {
